// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with address and name but no number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          {
            "borderColor": "#2F4ACD",
            "borderWidth": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 12,
              "lineHeight": 24,
            },
            {
              "color": "#2F4ACD",
              "fontSize": 20,
              "lineHeight": 26.666666666666668,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "fontFamily": "RedHatDisplayRegular",
        "fontSize": 12,
        "letterSpacing": 0.12,
        "lineHeight": 16,
        "marginHorizontal": 20,
        "paddingTop": 6,
        "textAlign": "center",
      }
    }
  >
    0x0000...7E57
  </Text>
</View>
`;

exports[`Avatar renders correctly with address but no name nor number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          {
            "borderColor": "#2F4ACD",
            "borderWidth": 1,
          },
        ]
      }
    >
      <svg
        fill="none"
        height={24}
        viewBox="0 0 22 27"
        width={24}
      >
        <path
          d="M10.9928 14.5244C15.1115 14.5244 18.4491 11.2737 18.4491 7.26218C18.4491 3.25069 15.1115 0 10.9928 0C6.87406 0 3.53648 3.25069 3.53648 7.26218C3.53648 11.2737 6.87406 14.5244 10.9928 14.5244ZM10.9928 2.07491C13.9327 2.07491 16.3187 4.39881 16.3187 7.26218C16.3187 10.1256 13.9327 12.4495 10.9928 12.4495C8.05287 12.4495 5.66685 10.1256 5.66685 7.26218C5.66685 4.39881 8.05287 2.07491 10.9928 2.07491ZM21.9997 21.745V23.1421C21.9997 24.4286 21.5168 25.6735 20.6363 26.628C20.2528 27.0706 19.5853 27.126 19.1308 26.7525C18.6763 26.379 18.6195 25.7289 19.003 25.2862C19.0172 25.2724 19.0314 25.2586 19.0456 25.2309C19.5711 24.6499 19.8693 23.903 19.8693 23.1283V21.7312C19.8835 19.6563 18.4633 17.8442 16.4039 17.3186C16.0489 17.2356 15.6654 17.2771 15.3387 17.4569C12.6403 18.9093 9.3595 18.9093 6.64683 17.4569C6.32017 17.2771 5.9367 17.2218 5.58164 17.3186C3.52228 17.8442 2.08782 19.6563 2.11623 21.7312V23.1283C2.11623 23.903 2.40026 24.6499 2.93995 25.2309C3.32342 25.6735 3.25241 26.3237 2.81214 26.6972C2.38606 27.043 1.74697 27.0153 1.3635 26.6142C0.482945 25.6597 7.20182e-05 24.4148 7.20182e-05 23.1283V21.7312C-0.0141305 18.7157 2.07362 16.0598 5.08454 15.3128C5.9793 15.0915 6.91667 15.216 7.71201 15.6587C9.77137 16.7653 12.2568 16.7653 14.3019 15.6587C15.0973 15.2298 16.0347 15.1053 16.9294 15.3267C19.9261 16.0736 22.0281 18.7157 21.9997 21.745Z"
          fill="#2F4ACD"
        />
      </svg>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    feedItemAddress, {"address":"0x0000...7E57"}
  </Text>
</View>
`;

exports[`Avatar renders correctly with just number 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          {
            "borderColor": "#2F4ACD",
            "borderWidth": 1,
          },
        ]
      }
    >
      <svg
        fill="none"
        height={24}
        viewBox="0 0 22 27"
        width={24}
      >
        <path
          d="M10.9928 14.5244C15.1115 14.5244 18.4491 11.2737 18.4491 7.26218C18.4491 3.25069 15.1115 0 10.9928 0C6.87406 0 3.53648 3.25069 3.53648 7.26218C3.53648 11.2737 6.87406 14.5244 10.9928 14.5244ZM10.9928 2.07491C13.9327 2.07491 16.3187 4.39881 16.3187 7.26218C16.3187 10.1256 13.9327 12.4495 10.9928 12.4495C8.05287 12.4495 5.66685 10.1256 5.66685 7.26218C5.66685 4.39881 8.05287 2.07491 10.9928 2.07491ZM21.9997 21.745V23.1421C21.9997 24.4286 21.5168 25.6735 20.6363 26.628C20.2528 27.0706 19.5853 27.126 19.1308 26.7525C18.6763 26.379 18.6195 25.7289 19.003 25.2862C19.0172 25.2724 19.0314 25.2586 19.0456 25.2309C19.5711 24.6499 19.8693 23.903 19.8693 23.1283V21.7312C19.8835 19.6563 18.4633 17.8442 16.4039 17.3186C16.0489 17.2356 15.6654 17.2771 15.3387 17.4569C12.6403 18.9093 9.3595 18.9093 6.64683 17.4569C6.32017 17.2771 5.9367 17.2218 5.58164 17.3186C3.52228 17.8442 2.08782 19.6563 2.11623 21.7312V23.1283C2.11623 23.903 2.40026 24.6499 2.93995 25.2309C3.32342 25.6735 3.25241 26.3237 2.81214 26.6972C2.38606 27.043 1.74697 27.0153 1.3635 26.6142C0.482945 25.6597 7.20182e-05 24.4148 7.20182e-05 23.1283V21.7312C-0.0141305 18.7157 2.07362 16.0598 5.08454 15.3128C5.9793 15.0915 6.91667 15.216 7.71201 15.6587C9.77137 16.7653 12.2568 16.7653 14.3019 15.6587C15.0973 15.2298 16.0347 15.1053 16.9294 15.3267C19.9261 16.0736 22.0281 18.7157 21.9997 21.745Z"
          fill="#2F4ACD"
        />
      </svg>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    +14155556666
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        {
          "alignItems": "center",
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 14,
          "justifyContent": "center",
          "lineHeight": 20,
          "marginRight": 4,
        }
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly with number and name 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
          {
            "borderColor": "#2F4ACD",
            "borderWidth": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "fontFamily": "RedHatDisplayMedium",
              "fontSize": 12,
              "lineHeight": 24,
            },
            {
              "color": "#2F4ACD",
              "fontSize": 20,
              "lineHeight": 26.666666666666668,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 20,
        },
        {
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "letterSpacing": 0.12,
          "lineHeight": 16,
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        {
          "alignItems": "center",
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 14,
          "justifyContent": "center",
          "lineHeight": 20,
          "marginRight": 4,
        }
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "RedHatDisplayMedium",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      +1 415-555-6666
    </Text>
  </View>
</View>
`;
